--- a/play-with-kafka/000-kafka-ui/application.yml
+++ b/play-with-kafka/000-kafka-ui/application.yml
@@ -5,6 +5,8 @@ logging:
     reactor.netty.http.server.AccessLog: INFO
     org.springframework.security: DEBUG
 
+server.port: 8181
+
 kafka:
   clusters:
     - name: local-kafka-cluster
