--- a/play-with-kafka/000-kafka-ui/application.yml
+++ b/play-with-kafka/000-kafka-ui/application.yml
@@ -1,9 +1,9 @@
 logging:
   level:
     root: INFO
-    com.provectus: DEBUG
-    reactor.netty.http.server.AccessLog: INFO
-    org.springframework.security: DEBUG
+    # com.provectus: DEBUG
+    # reactor.netty.http.server.AccessLog: INFO
+    # org.springframework.security: DEBUG
 
 server.port: 8181
 
@@ -12,5 +12,10 @@ kafka:
     - name: local-kafka-cluster
       bootstrapServers: localhost:9092
       schemaRegistry: http://localhost:8081
+      kafkaConnect:
+        - name: w1
+          address: http://localhost:8083
+        - name: w2
+          address: http://localhost:8084
 
 dynamic.config.enabled: true
