--- a/play-with-kafka/002-kafka-clients/kafka-clients-in-java/pom.xml
+++ b/play-with-kafka/002-kafka-clients/kafka-clients-in-java/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>kafka-clients</artifactId>
             <version>3.6.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-streams</artifactId>
+            <version>3.6.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
