--- a/play-with-strimzi/01/kafka-cluster.yaml
+++ b/play-with-strimzi/01/kafka-cluster.yaml
@@ -7,8 +7,8 @@ spec:
     version: 3.6.1
     replicas: 3
     listeners:
-      - name: plain
-        port: 9092
+      - name: listener1
+        port: 9094
         type: loadbalancer
         tls: false
     config:
