--- a/week-3/day-10/ingress-kibana.yaml
+++ b/week-3/day-10/ingress-kibana.yaml
@@ -3,11 +3,16 @@ kind: Ingress
 metadata:
   name: ingress-kibana
   annotations:
+    annotations:
+    cert-manager.io/cluster-issuer: letsencrypt
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: nginx
+  tls:
+    - hosts:
+        - kibana.nagcloudlab.com
+      secretName: tls-secret
   rules:
     - host: kibana.nagcloudlab.com
       http:
